Substitute some CSS values with theme variables
Add a global CSS theme that centralizes style variables for easy update

--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -15,12 +15,12 @@
 }
 
 .profilePicture {
-  width: 32px;
-  height: 32px;
+  width: var(--profile-picture-size);
+  height: var(--profile-picture-size);
   border-radius: 50%;
-  margin: 4px;
+  margin: var(--margin-size);
 }
 
 .profileName {
-  margin: 4px;
+  margin: var(--margin-size);
 }
