--- a/components/generic/Button.module.css
+++ b/components/generic/Button.module.css
@@ -1,20 +1,21 @@
 .button {
-  background-color: white;
+  background-color: var(--bg-color);
   border: none;
-  margin: 0 4px;
-  padding: 4px 8px;
-  border-radius: 2px;
+  margin: 0 var(--margin-size);
+  padding: var(--padding);
+  border-radius: var(--border-radius);
   text-decoration: none;
 }
 
 .mainButton {
   composes: button;
-  background-color: #3179ff;
-  color: white;
+  background-color: var(--main-color);
+  color: var(--main-font-color);
 }
 
 .secondaryButton {
   composes: button;
   background-color: transparent;
   text-decoration: underline;
+  color: var(--secondary-font-color);
 }
