--- a/components/blog/Header.module.css
+++ b/components/blog/Header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  padding: 1rem 2rem;
+  padding: var(--padding-panel);
 }
 
 .left {
