--- a/styles/global.css
+++ b/styles/global.css
@@ -10,20 +10,28 @@ html {
 
 .mainTheme {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
   /* Size */
   --size-unit: 4px;
   --double-size-unit: calc(var(--size-unit) * 2);
   --four-size-unit: calc(var(--size-unit) * 4);
+  --six-size-unit: calc(var(--size-unit) * 6);
+  --eight-size-unit: calc(var(--size-unit) * 8);
+  --ten-size-unit: calc(var(--size-unit) * 10);
   --half-size-unit: calc(var(--size-unit) / 2);
 
   --margin-size: var(--size-unit);
   --margin-size-2: var(--four-size-unit);
   --padding: var(--size-unit) var(--double-size-unit);
   --padding-2: var(--double-size-unit) var(--four-size-unit);
+  --padding-panel: 1rem 2rem;
   --border-radius: var(--half-size-unit);
   --border-radius-2: var(--size-unit);
 
   --font-size: var(--four-size-unit);
+  --font-size-title: var(--ten-size-unit);
+  --font-size-title-2: var(--eight-size-unit);
+  --font-size-title-3: var(--six-size-unit);
 
   --profile-picture-size: calc(var(--size-unit) * 10);
 
