--- a/components/LandingPanel.module.css
+++ b/components/LandingPanel.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  justify-content: flex-end;
+  justify-content: center;
 
   width: 100%;
   height: 100vh;
