Add user pill in the header
Create a user pill component located in the header of the blog page, that leads to the user page
- Remove the log-out button from the header

--- a/styles/global.css
+++ b/styles/global.css
@@ -28,6 +28,7 @@ html {
   --padding-panel: 1rem 2rem;
   --border-radius: var(--half-size-unit);
   --border-radius-2: var(--size-unit);
+  --border-radius-3: var(--double-size-unit);
 
   --font-size: var(--four-size-unit);
   --font-size-title: var(--ten-size-unit);
