--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@ html {
   box-sizing: inherit;
 }
 
-.mainTheme {
+:root {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
   /* Size */
@@ -43,6 +43,8 @@ html {
 
   --main-color: #3179ff;
   --main-font-color: white;
+
+  --complementary-color: #fa2daf;
 
   --secondary-font-color: black;
 
