--- a/components/generic/Button.module.css
+++ b/components/generic/Button.module.css
@@ -2,15 +2,17 @@
   background-color: var(--bg-color);
   border: none;
   margin: 0 var(--margin-size);
-  padding: var(--padding);
-  border-radius: var(--border-radius);
+  padding: var(--padding-button);
+  border-radius: var(--border-radius-3);
   text-decoration: none;
+  font-size: var(--font-size-button);
 }
 
 .mainButton {
   composes: button;
   background-color: var(--main-color);
   color: var(--main-font-color);
+  box-shadow: var(--main-shadow);
 }
 
 .secondaryButton {
