Change header padding and hide 'cards' page route

--- a/components/common/Header.module.css
+++ b/components/common/Header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  padding: var(--padding-panel);
+  padding: var(--padding);
 }
 
 .left {
