--- a/styles/global.css
+++ b/styles/global.css
@@ -49,6 +49,7 @@ html {
 
   --main-color: #3179ff;
   --main-font-color: white;
+  --main-color-negative: #ff315e;
 
   --complementary-color: #fa2daf;
 
