--- a/components/generic/Button.module.css
+++ b/components/generic/Button.module.css
@@ -15,6 +15,11 @@
   box-shadow: var(--main-shadow);
 }
 
+.mainButtonNegative {
+  composes: mainButton;
+  background-color: var(--main-color-negative);
+}
+
 .secondaryButton {
   composes: button;
   background-color: transparent;
